--- a/k8s/charts/seaweedfs/templates/post-install-user-hook.yaml
+++ b/k8s/charts/seaweedfs/templates/post-install-user-hook.yaml
@@ -47,12 +47,12 @@ spec:
           - name: SEAWEEDFS_FULLNAME
             value: "{{ template "seaweedfs.name" . }}"
           {{- range $reg, $props := $.Values.filer.s3.createUsers }}
-          - name: "{{ $props.secretName | upper }}-ID"
+          - name: {{ $props.secretName | upper }}_ID
             valueFrom:
               secretKeyRef:
                 name: {{ $props.secretName }}
                 key: ACCESS_KEY_ID
-          - name: "{{ $props.secretName | upper }}-KEY"
+          - name: {{ $props.secretName | upper }}_KEY
             valueFrom:
               secretKeyRef:
                 name: {{ $props.secretName }}
@@ -67,8 +67,8 @@ spec:
             "s3.configure --user {{ $props.name }} \
                 --buckets {{ $props.buckets }} \
                 --actions {{ $props.actions }} \
-                --access_key "${{ $props.secretName | upper }}-ID" \
-                --secret_key "${{ $props.secretName | upper }}-KEY" \
+                --access_key ${{ $props.secretName | upper }}_ID \
+                --secret_key ${{ $props.secretName | upper }}_KEY \
                 --apply true" |\
             /usr/bin/weed shell
           {{- end }}
