add a true flag to job command

--- a/k8s/charts/seaweedfs/templates/post-install-bucket-hook.yaml
+++ b/k8s/charts/seaweedfs/templates/post-install-bucket-hook.yaml
@@ -60,8 +60,9 @@ spec:
             exec /bin/echo \
             "s3.configure --user anonymous \
                 --buckets {{ $props.name }} \
-                --actions Read" |\
-            /usr/bin/weed shell
+                --actions Read \
+                --apply true" |\
+                /usr/bin/weed shell
           {{- end }}  
           {{- end }}
         {{- if .Values.filer.s3.enableAuth }}
