revert debug changes i missed

--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -30,7 +30,7 @@ global:
   # Z number of replica in other servers in the same rack
   replicationPlacment: "001"
   extraEnvironmentVars:
-    WEED_CLUSTER_DEFAULT: "config"
+    WEED_CLUSTER_DEFAULT: "sw"
     WEED_CLUSTER_SW_MASTER: "seaweedfs-master.seaweedfs:9333"
     WEED_CLUSTER_SW_FILER: "seaweedfs-filer-client.seaweedfs:8888"
 
@@ -574,7 +574,7 @@ filer:
     skipAuthSecretCreation: false
     # set to the name of an existing kubernetes Secret with the s3 json config file
     # should have a secret key called seaweedfs_s3_config with an inline json configure
-    existingConfigSecret: false
+    existingConfigSecret: ""
     auditLogConfig: {}
     # You may specify buckets to be created during the install process.
     # Buckets may be exposed publicly by setting `anonymousRead` to `true`
