existingConfigSecretshould now be consistently treated as a string in the post-install-hook

--- a/k8s/charts/seaweedfs/templates/post-install-bucket-hook.yaml
+++ b/k8s/charts/seaweedfs/templates/post-install-bucket-hook.yaml
@@ -88,7 +88,7 @@ spec:
         - name: config-users
           secret:
             defaultMode: 420
-            {{- if .Values.filer.s3.existingConfigSecret }}
+            {{- if not (empty .Values.filer.s3.existingConfigSecret) }}
             secretName: {{ .Values.filer.s3.existingConfigSecret }}
             {{- else }}
             secretName: seaweedfs-s3-secret
