--- a/weed/command/scaffold/replication.toml
+++ b/weed/command/scaffold/replication.toml
@@ -6,6 +6,8 @@
 #    $HOME/.seaweedfs/replication.toml
 #    /etc/seaweedfs/replication.toml
 
+# !!! is_bucket_to_bucket only works with s3.sink, not other options
+
 [source.filer]  # deprecated. Only useful with "weed filer.replicate"
 enabled = true
 grpcAddress = "localhost:18888"
@@ -46,6 +48,9 @@ bucket = "your_bucket_name"    # an existing bucket
 directory = "/"                # destination directory
 endpoint = ""
 is_incremental = false
+is_bucket_to_bucket = false    # It will backup the whole buckets in the /buckets path to the specified S3.
+                               # Each bucket will have its corresponding bucket in the backup S3.
+                               # Exclude paths on filer.backup command will only affect if they start with /buckets
 
 [sink.google_cloud_storage]
 # read credentials doc at https://cloud.google.com/docs/authentication/getting-started
