Publish seaweedfs-3.60.0.tgz

--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -3,6 +3,15 @@ entries:
   seaweedfs:
   - apiVersion: v1
     appVersion: "3.59"
+    created: "2023-12-14T16:25:52.925590435Z"
+    description: SeaweedFS
+    digest: 0d4fa3c66eff28e5d059cb143765778e4b6647fd7bade810ce6a4521f89be719
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.60.0.tgz
+    version: 3.60.0
+  - apiVersion: v1
+    appVersion: "3.59"
     created: "2023-12-06T06:39:21.236547782Z"
     description: SeaweedFS
     digest: b20bea7fb6e291414ceda34c5879e86bbe12aaf619ba98c66c7be62a3585b248
@@ -190,4 +199,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-12-06T06:39:21.234652871Z"
+generated: "2023-12-14T16:25:52.923656394Z"
