--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.60"
+    created: "2024-01-02T03:11:54.827158837Z"
+    description: SeaweedFS
+    digest: c79b1bfcc85abda6d73698cc00d4132e1232c3ca7a87c013f2ed575c68bd98cd
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.60.1.tgz
+    version: 3.60.1
+  - apiVersion: v1
     appVersion: "3.59"
     created: "2023-12-28T15:47:03.262307555Z"
     description: SeaweedFS
@@ -199,4 +208,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-12-28T15:47:03.260295766Z"
+generated: "2024-01-02T03:11:54.825091081Z"
