--- a/docker/compose/local-sync-mount-compose.yml
+++ b/docker/compose/local-sync-mount-compose.yml
@@ -3,6 +3,9 @@ services:
   node1:
     image: chrislusf/seaweedfs:local
     command: "server -master -volume -filer"
+    ports:
+      - 8888:8888
+      - 18888:18888
     healthcheck:
       test: [ "CMD", "curl", "--fail", "-I", "http://localhost:9333/cluster/healthz" ]
       interval: 1s
@@ -24,6 +27,7 @@ services:
     image: chrislusf/seaweedfs:local
     ports:
       - 7888:8888
+      - 17888:18888
     command: "server -master -volume -filer"
     healthcheck:
       test: [ "CMD", "curl", "--fail", "-I", "http://localhost:9333/cluster/healthz" ]
