--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.62"
+    created: "2024-01-16T04:44:24.933187135Z"
+    description: SeaweedFS
+    digest: 1f022a74a5a9aabfc398ee5f8e438cc3e40f077e28c526edc0dd903adac6fae8
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.62.0.tgz
+    version: 3.62.0
+  - apiVersion: v1
     appVersion: "3.61"
     created: "2024-01-08T08:05:15.852931881Z"
     description: SeaweedFS
@@ -217,4 +226,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2024-01-08T08:05:15.850988091Z"
+generated: "2024-01-16T04:44:24.929692243Z"
