add loop around volume mounts for initContainers

--- a/k8s/charts/seaweedfs/templates/volume-statefulset.yaml
+++ b/k8s/charts/seaweedfs/templates/volume-statefulset.yaml
@@ -64,8 +64,10 @@ spec:
           volumeMounts:
             - name: idx
               mountPath: {{ .Values.volume.idx.name }}
-            - name: data
-              mountPath: {{ .Values.volume.dir }}
+          {{- range $dir :=  .Values.volume.dataDirs }} 
+            - name: {{ $dir.name }}
+              mountPath: /{{ $dir.name }}
+          {{- end }}
         {{- end }}
         {{- if .Values.volume.initContainers }}
         {{ tpl .Values.volume.initContainers . | nindent 8 | trim }}
