--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -89,7 +89,6 @@ master:
   #    claimName: "my-pvc"
   data:
     type: "hostPath"
-    size: ""
     storageClass: ""
     hostPathPrefix: /ssd
 
@@ -239,31 +238,43 @@ volume:
   # minimum free disk space(in percents). If free disk space lower this value - all volumes marks as ReadOnly
   minFreeSpacePercent: 7
 
-  # You may use ANY storage-class, example with local-path-provisioner
+  # For each data disk you may use ANY storage-class, example with local-path-provisioner
   # Annotations are optional.
-  #  data:
-  #    type: "persistentVolumeClaim"
-  #    size: "24Ti"
-  #    storageClass: "local-path-provisioner"
-  #    annotations:
+  #  dataDirs:
+  #   - name: data:
+  #     type: "persistentVolumeClaim"
+  #     size: "24Ti"
+  #     storageClass: "local-path-provisioner"
+  #     annotations:
   #      "key": "value"
+  #     maxVolumes: 0
   #
   # You may also spacify an existing claim:
-  #  data:
-  #    type: "existingClaim"
-  #    claimName: "my-pvc"
+  #    - name: data
+  #      type: "existingClaim"
+  #      claimName: "my-pvc"
+  #     maxVolumes: 0
 
-  data:
-    type: "hostPath"
-    size: ""
-    storageClass: ""
-    hostPathPrefix: /storage
+
+  dataDirs:
+   - name: data1
+     type: "hostPath"
+     hostPathPrefix: /ssd
+     maxVolumes: 0   # If set to zero on non-windows OS, the limit will be auto configured. (default "7")
+
+   #- name: data2
+   #  type: "persistentVolumeClaim"
+   #  storageClass: "yourClassNameOfChoice"
+   #  size: "800Gi"
+   #  maxVolumes: 0
+
 
   idx:
     type: "hostPath"
     size: ""
     storageClass: ""
     hostPathPrefix: /ssd
+
 
   logs:
     type: "hostPath"
@@ -274,14 +285,6 @@ volume:
   # limit background compaction or copying speed in mega bytes per second
   compactionMBps: "50"
 
-  # Directories to store data files. dir[,dir]... (default "/tmp")
-  dir: "/data"
-  # Directories to store index files. dir[,dir]... (default is the same as "dir")
-  dir_idx: null
-
-  # Maximum numbers of volumes, count[,count]...
-  # If set to zero on non-windows OS, the limit will be auto configured. (default "7")
-  maxVolumes: "0"
 
   # Volume server's rack name
   rack: null
