fix: s3tests to release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,7 @@ build_large_disk:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 docker:build:public:s3tests:
+  stage: release
   extends: docker:build:public
   rules:
     - when: manual
