--- a/k8s/charts/seaweedfs/templates/volume-statefulset.yaml
+++ b/k8s/charts/seaweedfs/templates/volume-statefulset.yaml
@@ -59,11 +59,11 @@ spec:
           image: {{ template "volume.image" . }}
           imagePullPolicy: {{ .Values.global.imagePullPolicy | default "IfNotPresent" }}
           command: [ '/bin/sh', '-c' ]
-          args: [ 'ls {{range $dir :=  .Values.volume.dataDirs }}/{{$dir.name}}/*.idx {{end}} && xargs -I {} mv {} /idx/' ]
+          args: [ '{{range $dir :=  .Values.volume.dataDirs }}if ls /{{$dir.name}}/*.idx  >/dev/null 2>&1; then mv /{{$dir.name}}/*.idx /idx/ ; fi; {{end}}' ]
           volumeMounts:
             - name: idx
               mountPath: /idx
-          {{- range $dir :=  .Values.volume.dataDirs }} 
+          {{- range $dir :=  .Values.volume.dataDirs }}
             - name: {{ $dir.name }}
               mountPath: /{{ $dir.name }}
           {{- end }}
@@ -237,7 +237,7 @@ spec:
       {{- if eq $dir.type "existingClaim" }}
         - name: {{ $dir.name }}
           persistentVolumeClaim:
-            claimName: {{ $dir.claimName }} 
+            claimName: {{ $dir.claimName }}
       {{- end }}
 
      {{- end }}
@@ -252,7 +252,7 @@ spec:
        {{- if eq .Values.volume.idx.type "existingClaim" }}
         - name: idx
           persistentVolumeClaim:
-            claimName: {{ .Values.volume.idx.claimName }} 
+            claimName: {{ .Values.volume.idx.claimName }}
        {{- end }}
      {{- end }}
 
@@ -266,7 +266,7 @@ spec:
        {{- if eq .Values.volume.logs.type "existingClaim" }}
         - name: logs
           persistentVolumeClaim:
-            claimName: {{ .Values.volume.logs.claimName }} 
+            claimName: {{ .Values.volume.logs.claimName }}
        {{- end }}
      {{- end }}
      {{- if .Values.global.enableSecurity }}
