--- a/k8s/charts/seaweedfs/templates/filer-statefulset.yaml
+++ b/k8s/charts/seaweedfs/templates/filer-statefulset.yaml
@@ -286,7 +286,7 @@ spec:
         - name: db-schema-config-volume
           configMap:
             name: seaweedfs-db-init-config
-        {{- if .Values.filer.s3.enableAuth }}
+        {{- if and .Values.filer.s3.enabled .Values.filer.s3.enableAuth }}
         - name: config-users
           secret:
             defaultMode: 420
