fix value for existingConfigSecret not being fetch from s3 but from filer.s3

--- a/k8s/charts/seaweedfs/templates/s3-deployment.yaml
+++ b/k8s/charts/seaweedfs/templates/s3-deployment.yaml
@@ -191,7 +191,7 @@ spec:
         - name: config-users
           secret:
             defaultMode: 420
-            {{- if .Values.filer.s3.existingConfigSecret }}
+            {{- if .Values.s3.existingConfigSecret }}
             secretName: {{ .Values.s3.existingConfigSecret }}
             {{- else }}
             secretName: seaweedfs-s3-secret
