--- a/docker/compose/local-filer-backup-compose.yml
+++ b/docker/compose/local-filer-backup-compose.yml
@@ -35,7 +35,7 @@ services:
       WEED_SINK_S3_AWS_ACCESS_KEY_ID: "some_access_key1"
       WEED_SINK_S3_AWS_SECRET_ACCESS_KEY: "some_secret_key1"
       WEED_SINK_S3_S3_DISABLE_CONTENT_MD5_VALIDATION: "false"
-      WEED_SINK_S3_UPLOADER_PART_SIZE: "5242880"
+      WEED_SINK_S3_UPLOADER_PART_SIZE_MB: "5"
       WEED_SINK_S3_KEEP_PART_SIZE: "false"
     depends_on:
       server-left:
