--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.64"
+    created: "2024-03-16T18:49:45.180254251Z"
+    description: SeaweedFS
+    digest: ccff704b667fc19200fe96691eda7ec43136cd9618a839978276deb6b0805bcc
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.64.0.tgz
+    version: 3.64.0
+  - apiVersion: v1
     appVersion: "3.63"
     created: "2024-02-26T06:26:45.016534116Z"
     description: SeaweedFS
@@ -235,4 +244,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2024-02-26T06:26:45.014303329Z"
+generated: "2024-03-16T18:49:45.177408212Z"
