--- a/docker/compose/s3tests.conf
+++ b/docker/compose/s3tests.conf
@@ -2,7 +2,7 @@
 ## this section is just used for host, port and bucket_prefix
 
 # host set for rgw in vstart.sh
-host = s3
+host = localhost
 
 # port set for rgw in vstart.sh
 port = 8000
