fix action step Run Rclone S3 tests

--- a/.github/workflows/s3tests.yml
+++ b/.github/workflows/s3tests.yml
@@ -19,7 +19,7 @@ defaults:
 
 jobs:
   s3tests:
-    name: Ceph S3 tests
+    name: S3 tests
     runs-on: ubuntu-22.04
     container:
       image: docker.io/kmlebedev/ceph-s3-tests:0.0.2
@@ -215,5 +215,5 @@ jobs:
             -volume.max=100 -volume.preStopSeconds=1 -s3.port=8000 -metricsPort=9324 \
             -s3.allowEmptyFolder=false -s3.allowDeleteBucketNotEmpty=true -s3.config=../docker/compose/s3.json &
           sleep 10          
-          cd /__w/seaweedfs/seaweedfs/rclone/rclone/backend/s3
+          cd /__w/rclone/rclone/backend/s3
           go test -v -remote swfs:
