--- a/.github/workflows/s3tests.yml
+++ b/.github/workflows/s3tests.yml
@@ -195,6 +195,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: "rclone/rclone"
+          path: "/__w/rclone/rclone"
 
       - name: Run Rclone S3 tests
         timeout-minutes: 15
