--- a/.github/workflows/s3tests.yml
+++ b/.github/workflows/s3tests.yml
@@ -191,7 +191,7 @@ jobs:
           s3tests_boto3/functional/test_s3.py::test_ranged_request_return_trailing_bytes_response_code \
           s3tests_boto3/functional/test_s3.py::test_copy_object_ifmatch_good \
           s3tests_boto3/functional/test_s3.py::test_copy_object_ifnonematch_failed
-          pkill weed && sleep 5
+          pkill -9 weed
 
       - uses: actions/checkout@v4
         with:
