--- a/.github/workflows/s3tests.yml
+++ b/.github/workflows/s3tests.yml
@@ -166,6 +166,7 @@ jobs:
           s3tests_boto3/functional/test_s3.py::test_multipart_copy_without_range \
           s3tests_boto3/functional/test_s3.py::test_multipart_upload_multiple_sizes \
           s3tests_boto3/functional/test_s3.py::test_multipart_copy_multiple_sizes \
+          s3tests_boto3/functional/test_s3.py::test_multipart_upload \
           s3tests_boto3/functional/test_s3.py::test_multipart_upload_contents \
           s3tests_boto3/functional/test_s3.py::test_multipart_upload_overwrite_existing_object \
           s3tests_boto3/functional/test_s3.py::test_abort_multipart_upload \
