--- a/.github/workflows/s3tests.yml
+++ b/.github/workflows/s3tests.yml
@@ -168,6 +168,7 @@ jobs:
           s3tests_boto3/functional/test_s3.py::test_multipart_copy_multiple_sizes \
           s3tests_boto3/functional/test_s3.py::test_multipart_upload_contents \
           s3tests_boto3/functional/test_s3.py::test_multipart_upload_overwrite_existing_object \
+          s3tests_boto3/functional/test_s3.py::test_multipart_upload_size_too_small \
           s3tests_boto3/functional/test_s3.py::test_abort_multipart_upload \
           s3tests_boto3/functional/test_s3.py::test_list_multipart_upload \
           s3tests_boto3/functional/test_s3.py::test_atomic_read_1mb \
