--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.65"
+    created: "2024-04-15T03:34:18.455576903Z"
+    description: SeaweedFS
+    digest: 8a075f2106cba8cea934f782588bddb1108b11db173b289dce5273132be1ae20
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.65.0.tgz
+    version: 3.65.0
+  - apiVersion: v1
     appVersion: "3.64"
     created: "2024-03-16T18:49:45.180254251Z"
     description: SeaweedFS
@@ -244,4 +253,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2024-03-16T18:49:45.177408212Z"
+generated: "2024-04-15T03:34:18.452877361Z"
