--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,7 @@ weed/*/*.jpg
 docker/weed_sub
 docker/weed_pub
 weed/mq/schema/example.parquet
+docker/weed_pub_kv
+docker/weed_pub_record
+docker/weed_sub_kv
+docker/weed_sub_record
